Date	Added
01/07
        * Stall_time wasn't being read in login_athena at all (not by the login server,
          because the code didn't read it, nor by TXT map server, since its in the SQL
          inter_athena.conf reading)... so moved it to inter_athena.conf, and
          change sql_config_read in map.c to inter_config_read [celest]
        * Some tidying up of battle_get_def and _def2 [celest]
        * Added 'bDelayrate' and changed Phen card, Marduk Card and Berzebub Card's
          effects to use this instead of bCastrate (which was reducing casting time,
          not delay time) [celest]
        * Some tidying up of skill_castfix and skill_delayfix [celest]
        * Added Filougarou's fix for Bowling Bash causing it to only display damage, 
          but doesn't do any - thanks! [celest]
        * Set delay_dependon_dex in battle_athena to 'no' by default [celest]

          Note: Just to clarify things, on official servers dex is not supposed to 
                reduce skill delays, only Poem of Bragi and Berzebub card does!

        * Fixed typo in skill_delayfix - reduce delays only if delaynodex was *not* set,
          sorry ^^; [celest]

01/06
	* Fixed various memory corruptions causing crashes (SVN 925) [MouseJstr]
	* Fixed typo in src/map/map.c causing compile 
	  errors (SVN 924) [MouseJstr]
	* Removed the alive_timer mechanism entirly replaced with
	  a stall detection mechanism that will disconnect a player
	  who has not sent any data for a configurable 
	  (conf/login_athena.conf:stall_time) amount of time.  The default
	  is currently 60 seconds.

	  The root cause of the disconnect error is that some NAT based
	  routers are not dropping the TCP connection when the aliased
	  machine goes offline abnormally.   This means that we are seeing
	  a stalled but perfectly valid TCP connection.

	  (SVN 924) [MouseJstr]
01/05
	* Fixed some typos in map_versionscreen() [MC Cameri]